--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ringbuffer = "0.8"
 rand = "0.8"
+rand_distr = "0.4"
 pcg_rand = "0.13"
 structopt = "0.3"
 itertools = "0.10"
