Add broken draft of parallel algorithm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ pcg_rand = "0.13"
 structopt = "0.3"
 itertools = "0.10"
 dynamic-weighted-index = { path = "../dynamic-weighted-index" }
+crossbeam = "0.8"
+fxhash = "0.2.1"
+atomic_float = "0.1.0"
 
 [profile.release]
 debug = true
