Improve progress reports and add option num_threads to CLI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ dynamic-weighted-index = { path = "../dynamic-weighted-index" }
 crossbeam = "0.8"
 fxhash = "0.2.1"
 atomic_float = "0.1.0"
+num_cpus = "1.13"
 
 [profile.release]
 debug = true
